--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -13,7 +13,7 @@
 <div class="card">
     <!-- <img src="" alt="John" style="width:100%"> -->
 
-    <div class="close" (click)="back()"><i class="close bi bi-x-square-fill"></i></div>
+    <div class="close" (click)="back()"><i type="button" class="close bi bi-x-square-fill"></i></div>
     <div id="profileImage">{{profileLetter}}</div>
     <h1>{{lastName}} {{firstName}}</h1>
     <p class="title">{{mailId}}</p>
