Added manager field successfully while signUp

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -18,7 +18,7 @@
     <h1>{{lastName}} {{firstName}}</h1>
     <p class="title">{{mailId}}</p>
     <p>{{phoneNumber}}</p>
-    <p></p>
+    <button tooltip={{manager}} placement="bottom">{{role}}</button>
     <div style="margin: 20px 0;">
         <a><i class="fa fa-dribbble"></i></a>
         <a><i class="fa fa-twitter"></i></a>
