Added hover text(tooltip) for Manager

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -167,7 +167,7 @@
         <!-- <div class="login">Already have an account? <a href="/login">Login</a></div> -->
         <div class="clearfix Col-md-12">
             <!--[disabled]="signUpForm.invalid"-->
-            <button class="col-md-3 btn btn-light" type="reset" [routerLink]="['/']">Cancel</button>
+            <button class="col-md-3 btn btn-light" type="reset" (click)="back()">Cancel</button>
             <button class="col-md-3 btn btn-primary " type="submit" (click)="onSubmit()">Update</button>
         </div>
     </div>
