--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -18,7 +18,8 @@
     <h1>{{lastName}} {{firstName}}</h1>
     <p class="title">{{mailId}}</p>
     <p>{{phoneNumber}}</p>
-    <button tooltip={{manager}} placement="bottom">{{role}}</button>
+    <p tooltip={{manager}} theme="light" openDelay="30" closeDelay="50" placement="bottom">{{role}}</p>
+    <!-- <p tooltip="hey" placement="bottom">Hello</p> -->
     <div style="margin: 20px 0;">
         <a><i class="fa fa-dribbble"></i></a>
         <a><i class="fa fa-twitter"></i></a>
