--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -53,7 +53,7 @@
                 <select ngModel={{manager}} formControlName="manager">
                     <!-- <option value="">---Select none---</option> -->
                     <option value="Admin" >Admin</option>
-                    <option value="Manager ID" >Manager ID</option>
+                    <option *ngFor="let manager of Managers" value={{manager.id}} >{{manager.name}}</option>
                 </select>
                 <div *ngIf="signUpForm.controls['role'].invalid && signUpForm.controls['role'].touched" class="warn">
                     <div *ngIf="signUpForm.controls['role'].errors?.required || signUpForm.controls['role'].errors?.pattern">
