--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -198,19 +198,24 @@
 } */
 
 div {
-    margin: 1%;
+    margin: 0.2%;
 }
 
-.sidePanel {
-    margin: 2%;
+.sidePanel,
+.rightPanel {
+    margin: 0.5%;
     width: 15%;
     border: 2px solid black;
     background-color: whitesmoke;
     color: white;
-    height: auto;
+    height: 88vh;
     text-align: center;
-    border-radius: 5%;
+    border-radius: 1%;
     box-shadow: 13px 13px 5px gray;
+}
+
+.rightPanel {
+    width: 80%;
 }
 
 .option {
@@ -219,4 +224,17 @@ div {
     background-color: rgb(42, 42, 94);
     margin: 2%;
     border-radius: 5%;
+}
+
+mat-datepicker-toggle {
+    color: black;
+}
+
+mat-label {
+    color: aqua;
+}
+
+mat-datepicker {
+    color: blue !important;
+    background-color: blue !important;
 }
