--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -78,5 +78,11 @@
             <router-outlet></router-outlet>
         </div>
     </div> -->
-<app-leftpanel></app-leftpanel>
-<app-rightpanel></app-rightpanel>
+<div class="row">
+    <div class="leftPanel">
+        <app-leftpanel></app-leftpanel>
+    </div>
+    <div class="rightPanel">
+        <app-rightpanel></app-rightpanel>
+    </div>
+</div>
