--- a/src/app/dashboard/leftpanel/leftpanel.component.css
+++ b/src/app/dashboard/leftpanel/leftpanel.component.css
@@ -1,12 +1,18 @@
-.leftPanel {
+/* .leftPanel {
     margin: 0.5%;
-    width: 15%;
+    max-width: 100%;
     border: 2px solid black;
     background-color: whitesmoke;
-    color: white;
+    color: black;
     height: 88vh;
     text-align: center;
     border-radius: 1%;
     box-shadow: 13px 13px 5px gray;
     margin-left: 3%;
+} */
+
+.btn {
+    margin: 1%;
+    width: 100%;
+    background-color: rgb(16, 16, 65);
 }
