--- a/src/app/dashboard/leftpanel/leftpanel.component.html
+++ b/src/app/dashboard/leftpanel/leftpanel.component.html
@@ -1,8 +1,4 @@
-<div class="leftPanel">
-    <!-- <div class="option" name="Profile" [routerLinkActive]="['link-active']" type="button"> -->
-    <div><a [routerLink]="['/profile1']">Profile</a></div>
-    <!-- </div>
-    <div class="option" name="Profile" [routerLinkActive]="['link-active']" [routerLink]="['/about']" type="button"> -->
-    <div><a [routerLink]="['/about']">About</a></div>
-    <!-- </div> -->
+<div class="">
+    <div class="btn btn-primary" [routerLink]="['profile1']">Profile</div>
+    <div class="btn btn-primary" [routerLink]="['about']">About</div>
 </div>
