--- a/src/app/dashboard/rightpanel/rightpanel.component.html
+++ b/src/app/dashboard/rightpanel/rightpanel.component.html
@@ -1,2 +1,4 @@
 <!-- <p>rightpanel works!</p> -->
-<router-outlet></router-outlet>
+<div class="rightpanel">
+    <router-outlet></router-outlet>
+</div>
