--- a/src/app/dashboard/side-panel/side-panel.component.html
+++ b/src/app/dashboard/side-panel/side-panel.component.html
@@ -1,13 +1,1 @@
-<div class="row">
-    <div class="sidePanel">
-        <div class="option" name="Profile" [routerLinkActive]="['link-active']" type="button">
-            <a href="./profile1">Profile</a>
-        </div>
-        <div class="option" name="Profile" [routerLinkActive]="['link-active']" [routerLink]="['/about']" type="button">
-            <a href="./about">About</a>
-        </div>
-    </div>
-    <div class="rightPanel">
-
-    </div>
-</div>
+<p>SidePanel</p>
