Supporting fa icons and added animation while startup

--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <header class="head">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" [routerLink]="['/']">TestApplication</a>
+            <a class="navbar-brand" [routerLink]="['/']">TestApplication<i class="fas fa-feather-alt"></i></a>
             <!-- <button
         class="navbar-toggler"
         type="button"
