--- a/src/app/mainPanel/mainPanel.component.css
+++ b/src/app/mainPanel/mainPanel.component.css
@@ -18,10 +18,32 @@
 
 .leftPanel {
     margin-left: 2%;
+    /*transition: all .3s;*/
 }
+
+
+/* .leftPanel:hover {
+    margin-left: 2%;
+    transition: 2s;
+} */
+
+
+/* .rightPanel:hover {
+    width: 85%;
+    transition: 2s;
+} */
 
 .rightPanel {
     width: 80%;
+}
+
+.bi-three-dots-vertical {
+    float: left;
+    margin-left: -25px;
+}
+
+.bi-arrow-right {
+    float: right;
 }
 
 
