--- a/src/app/mainPanel/mainPanel.component.html
+++ b/src/app/mainPanel/mainPanel.component.html
@@ -79,16 +79,20 @@
         </div>
     </div> -->
 <div class="row">
-    <div class="leftPanel" [hidden]="showPassword" [style.width.%]="widthLeft">
+    <div class="leftPanel" [hidden]="showPassword" [style.transition.s]="transition" [style.width.%]="widthLeft">
+        <!-- <div class="leftPanel" [style.opacity]="showPassword ? '0' : '1'" [style.visibility]="showPassword ? 'hidden' : 'visible'"> -->
         <!-- <i type="button" class="fa-solid fa-arrows-left-right" (click)="showPassword = !showPassword" [hidden]="showPassword"></i> {{showPassword}}
         <i type="button" class="fa-duotone fa-chevron-right" (click)="!showPassword = showPassword" [hidden]="!showPassword"></i> {{showPassword}} -->
-        <div class="col-md-1" type="button"><i (click)="sidebar(showPassword = !showPassword)" class="bi bi-arrow-right" [hidden]="showPassword"></i> {{showPassword}}
+        <div class="col-md-1" type="button">
+            <!-- <i (click)="sidebar(showPassword = !showPassword)" class="bi bi-arrow-right l-arr" [hidden]="showPassword"></i> -->
+            <!-- {{showPassword}} -->
         </div>
         <app-leftpanel [hidden]="showPassword"></app-leftpanel>
         <!-- <i class="fa-solid fa-fish-fins"></i> -->
     </div>
-    <div class="rightPanel" [style.width.%]="width" [style.margin-left.%]="margin">
-        <i class="bi bi-arrow-left" (click)="showPassword = !showPassword"></i>{{showPassword}}
+    <div class="rightPanel" [style.width.%]="width" [style.transition.s]="transition" [style.margin-left.%]="margin">
+        <i class="bi bi-three-dots-vertical" (click)="sidebar(showPassword = !showPassword)"></i>
+        <!-- {{showPassword}} -->
         <app-rightpanel></app-rightpanel>
         <!-- <app-rightpanel *ngIf="!showPassword"></app-rightpanel> -->
     </div>
