--- a/src/app/nav-menu/nav-menu.component.css
+++ b/src/app/nav-menu/nav-menu.component.css
@@ -44,6 +44,7 @@ html {
     margin-top: 0%;
 } */
 
-::ng-deep.ngTemplateTips::before {
+
+/* ::ng-deep.ngTemplateTips::before {
     border-bottom-color: rgb(189, 207, 24) !important;
-}
+} */
