--- a/src/app/mainPanel/mainPanel.component.html
+++ b/src/app/mainPanel/mainPanel.component.html
@@ -1,100 +1,14 @@
-<!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-
-    <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef> First Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef> Last Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="mailId">
-        <th mat-header-cell *matHeaderCellDef> Mail ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.mailId}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="phoneNumber">
-        <th mat-header-cell *matHeaderCellDef> Phone Number </th>
-        <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-</table> -->
-<!-- <mat-progress-bar mode="buffer"></mat-progress-bar>
-<mat-drawer-container class="example-container" autosize>
-    <mat-drawer #drawer class="example-sidenav" mode="side">
-        <p>Auto-resizing sidenav</p>
-        <mat-spinner class="spinCle"></mat-spinner>
-        <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-        <button (click)="showFiller = !showFiller" mat-raised-button>
-        Toggle extra text
-      </button>
-
-    </mat-drawer>
-
-    <div class="example-sidenav-content">
-        <button type="button" mat-button (click)="drawer.toggle()">
-        Toggle sidenav
-      </button>
-    </div>
-
-</mat-drawer-container> -->
-
-<!-- <div>Welcome to {{lastName}} {{firstName}}</div> -->
-<!-- <div class="row">
-    <div class="sidePanel">
-        <div class="option" name="Profile" [routerLinkActive]="['link-active']" type="button">
-            <a href="./profile1">Profile</a>
-        </div>
-        <div class="option" name="Profile" [routerLinkActive]="['link-active']" [routerLink]="['/about']" type="button">
-            <a href="./about">About</a>
-        </div>
-    </div>
-    <div class="rightPanel">
-
-    </div>
-</div> -->
-
-
-<!-- <mat-form-field appearance="fill">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field> -->
-<!-- <div class="row col-md-12">
-        <div class="lcol-md-2">
-            <app-side-panel></app-side-panel>
-        </div>
-        <div class="col-md-10 rightPanel">
-            <router-outlet></router-outlet>
-        </div>
-    </div> -->
 <div class="row">
-    <div class="leftPanel" [hidden]="showPassword" [style.transition.s]="transition" [style.width.%]="widthLeft">
-        <!-- <div class="leftPanel" [style.opacity]="showPassword ? '0' : '1'" [style.visibility]="showPassword ? 'hidden' : 'visible'"> -->
-        <!-- <i type="button" class="fa-solid fa-arrows-left-right" (click)="showPassword = !showPassword" [hidden]="showPassword"></i> {{showPassword}}
-        <i type="button" class="fa-duotone fa-chevron-right" (click)="!showPassword = showPassword" [hidden]="!showPassword"></i> {{showPassword}} -->
+    <div class="leftPanel" [style.margin-left.%]="marginLeftPanel" [style.transition.s]="transition" [style.width.%]="widthLeft">
         <div class="col-md-1" type="button">
-            <!-- <i (click)="sidebar(showPassword = !showPassword)" class="bi bi-arrow-right l-arr" [hidden]="showPassword"></i> -->
-            <!-- {{showPassword}} -->
         </div>
-        <app-leftpanel [hidden]="showPassword"></app-leftpanel>
+        <app-leftpanel [hidden]="expand"></app-leftpanel>
         <!-- <i class="fa-solid fa-fish-fins"></i> -->
     </div>
     <div class="rightPanel" [style.width.%]="width" [style.transition.s]="transition" [style.margin-left.%]="margin">
-        <i class="bi bi-arrow-left-circle-fill" [hidden]="showPassword" (click)="sidebar(showPassword = !showPassword)"></i>
-        <i class="bi bi-arrow-right-circle-fill" [hidden]="!showPassword" (click)="sidebar(showPassword = !showPassword)"></i>
-        <!-- {{showPassword}} -->
+        <i class="bi bi-arrow-left-circle-fill" [hidden]="expand" (click)="sidebar(expand = !expand)"></i>
+        <i class="bi bi-arrow-right-circle-fill" [hidden]="!expand" (click)="sidebar(expand = !expand)"></i>
+        <!-- {{expand}} -->
         <app-rightpanel></app-rightpanel>
-        <!-- <app-rightpanel *ngIf="!showPassword"></app-rightpanel> -->
     </div>
 </div>
