--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,8 @@
 <header class="head">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <button class="menu" (click)="menu()"><i class="fa fa-bars" ></i></button>
         <div class="container">
+
             <a class="navbar-brand" [routerLink]="['/']">TestApplication<i class="fas fa-feather-alt"></i></a>
             <!-- <button
         class="navbar-toggler"
