--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <header class="head">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <button class="menu" (click)="menu('false')"><i class="fa fa-bars" ></i></button>
+        <button class="btn menu" (click)="sidePanelShowHide()"><i class="fa fa-bars" ></i></button>
         <div class="container">
 
             <a class="navbar-brand" [routerLink]="['/']">TestApplication<i class="fas fa-feather-alt"></i></a>
@@ -15,6 +15,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button> -->
+            <!-- {{message}} -->
             <div (icondata)="getNotification($event)" class="navbar-collapse collapse d-sm-inline-flex justify-content-end" [ngClass]="{ show: isExpanded }">
                 <ul class="navbar-nav flex-grow">
                     <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }">
